apollo-federation/tests/composition/snapshots/main__composition__compose_misc__misc_keeps_empty_object_argument_defaults_when_all_optional.snap
---
source: apollo-federation/tests/composition/compose_misc.rs
expression: supergraph.schema().schema()
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.6", for: EXECUTION) {
  query: Query
}

directive @link(url: String, as: String, for: link__Purpose, import: [link__Import]) repeatable on SCHEMA

directive @join__graph(name: String!, url: String!, internalDefinitions: String) on ENUM_VALUE

directive @join__type(graph: join__Graph!, key: join__FieldSet, extension: Boolean! = false, resolvable: Boolean! = true, isInterfaceObject: Boolean! = false) repeatable on OBJECT | INTERFACE | UNION | ENUM | INPUT_OBJECT | SCALAR

directive @join__field(graph: join__Graph, requires: join__FieldSet, provides: join__FieldSet, type: String, external: Boolean, override: String, usedOverridden: Boolean, overrideLabel: String, contextArguments: [join__ContextArgument!], lookup: Boolean, isArguments: [join__IsArgument!], requireArguments: [join__RequireArgument!]) repeatable on FIELD_DEFINITION | INPUT_FIELD_DEFINITION

directive @join__implements(graph: join__Graph!, interface: String!) repeatable on OBJECT | INTERFACE

directive @join__unionMember(graph: join__Graph!, member: String!) repeatable on UNION

directive @join__enumValue(graph: join__Graph!) repeatable on ENUM_VALUE

directive @join__directive(graphs: [join__Graph!], name: String!, args: join__DirectiveArguments) repeatable on SCHEMA | OBJECT | INTERFACE | FIELD_DEFINITION

enum link__Purpose {
  """
  `SECURITY` features provide metadata necessary to securely resolve fields.
  """
  SECURITY
  """
  `EXECUTION` features provide metadata necessary for operation execution.
  """
  EXECUTION
}

scalar link__Import

enum join__Graph {
  SUBGRAPH @join__graph(name: "subgraph", url: "http://subgraph")
}

scalar join__FieldSet

scalar join__DirectiveArguments

scalar join__FieldValue

input join__ContextArgument {
  name: String!
  type: String!
  context: String!
  selection: join__FieldValue!
}

scalar join__FieldSelectionMap

input join__IsArgument {
  name: String!
  selection: join__FieldSelectionMap!
}

input join__RequireArgument {
  name: String!
  type: String!
  selection: join__FieldSelectionMap!
}

type Query @join__type(graph: SUBGRAPH) {
  fieldB(filter: InputAllOptional = {}): String
}

input InputAllOptional @join__type(graph: SUBGRAPH) {
  optionalField: String
}
