apollo-federation/tests/composition/snapshots/main__composition__compose_misc__misc_preserves_defaults_inside_list_elements.snap
---
source: apollo-federation/tests/composition/compose_misc.rs
expression: query
---
type Query @join__type(graph: SUBGRAPH) {
  products(sort: [SortInput!] = [{}]): [Product!]!
}
