apollo-federation/tests/composition/snapshots/main__composition__compose_misc__misc_preserves_partial_input_object_defaults_without_expansion.snap
---
source: apollo-federation/tests/composition/compose_misc.rs
expression: query
---
type Query @join__type(graph: SUBGRAPH) {
  products(filter: SearchFilter = {paging: {limit: 10}, sorting: []}): [Product!]!
}
